--- a/custom.css
+++ b/custom.css
@@ -8,9 +8,8 @@ body{
   background-color: #EC7914;
   color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
   align-items:center;
-  position: relative; /* Allows positioning inside the header */
 }
 
 .C1 a {
@@ -30,70 +29,23 @@ body{
   padding:0;
   margin:0;
   display: flex;
-  position: absolute;
-  right: 45px; /* Position the menu to the right */
 }
 
 .C1 li {
   margin-left:40px;
 }
 
-.C2{
-  background-color: silver;
-  padding: 20px 45px;  
-  display:flex;
-  justify-content: center;
-}
-
-.C2-inner{
-  max-width:900px;
-}
-
-.C2 h1{
-  font-weight:normal;
-  font-size:2rem;
-  margin: 0;
-}
-
-.C2 p{
-  line-height:1.7;
-}
-
-.Button{
-  background-color: #EC7914;
-  Color: yellow;
-  text-decoration:none;
-  padding: 10px 12px;
-  border-radius: 12px;    
-  display: inline-block;
-} 
-
-.C2-inner a:hover{
-  color:red;
-}
-
-.Features{
-  background-color: #c27d15;
-  padding: 20px 45px;
-}
-
-.feature-innter{
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 /* Mobile Responsive */
 @media only screen and (max-width: 600px) {
   .header {
     padding: 0 20px;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
   }
 
   .C1 {
     flex-direction: column;
-    align-items: flex-end; /* Align to the right on small screens */
-    right: 0; /* Keep the menu to the right */
+    align-items: flex-start;
   }
 
   .C1 li {
