--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,21 @@
+/* shakeX animation */
+@keyframes shakeX {
+  from, to {
+    transform: translate3d(0, 0, 0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translate3d(-10px, 0, 0);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translate3d(10px, 0, 0);
+  }
+}
+
+.animate__shakeX {
+  animation: shakeX 1s ease-in-out;
+}
+
+
 body {
   margin: 0;
   font-family: Kanit;
