--- a/custom.css
+++ b/custom.css
@@ -12,9 +12,10 @@
 }
 
 .animate__shakeX {
-  animation: shakeX 1s ease-in-out;
+  animation: shakeX 3s ease-in-out 1s infinite; /* Shake for 2s */
+  animation-delay: 6s; /* Wait for 7 seconds between shakes */
+  animation-iteration-count: infinite; /* Loop infinitely */
 }
-
 
 body {
   margin: 0;
