--- a/custom.css
+++ b/custom.css
@@ -143,7 +143,7 @@ body {
   0% { color: #ffffff; }
   25% { color: #76ff03; }
   50% { color: #1de9b6; }
-  75% { color: #ff5722; }
+  75% { color: #ff57ff; }
   100% { color: #3f51b5; }
 }
 
