--- a/search.css
+++ b/search.css
@@ -1,4 +1,9 @@
 /* Centered Header */
+
+body{
+    font-family: Kanit;
+}
+
 .centered-header {
     text-align: center;
     font-size: 4rem; /* Larger header text */
@@ -11,7 +16,7 @@
     display: flex;
     flex-direction: column; /* Stacked form elements */
     align-items: center;
-    gap: 15px; /* Add space between input and button */
+    gap: 10px; /* Add space between input and button */
 }
 
 .search-form input {
@@ -24,7 +29,7 @@
 
 .search-form button {
     padding: 15px 30px; /* Larger button */
-    font-size: 1.2rem; /* Larger text */
+    font-size: 1rem; /* Larger text */
     background-color: #FA802F; /* Orange background */
     color: white;
     border: none;
