--- a/custom.css
+++ b/custom.css
@@ -20,6 +20,7 @@ header {
   padding: 20px 50px;
   background: #FA802F;
   color: #FFF;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3); 
 }
 
 header h1 {
